--- a/marvel-portal/package.json
+++ b/marvel-portal/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "ngx-infinite-scroll": "^16.0.0",
     "rxjs": "~7.8.0",
     "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
